fixed z-index

--- a/journalia_frontend/src/components/pages/Calendar/scss/DateDisplay.scss
+++ b/journalia_frontend/src/components/pages/Calendar/scss/DateDisplay.scss
@@ -4,6 +4,6 @@
 
 #date-display {
     background-color: $lighter-copper;
-    
-    z-index: 10;
+    z-index:60;
+    left: 0;
 }
